# snowlhive

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  dprint.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: job_build.yml  job_release.yml  main.yml  schedule.yml
docker/: Dockerfile.development  Dockerfile.production  run_snowlhive.sh
src/: file_list.rs  main.rs  size_utils.rs  text_cleaner.rs  text_combiner.rs  text_output.rs
