[package]
name = "snowlhive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
humansize = "2.1.3"
ignore = "0.4.21"
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
